kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: muminst-server
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: muminst-server
      version: v1
  template:
    metadata:
      labels:
        app: muminst-server 
        version: v1
    spec:
      volumes:
      - name: muminst-server-volume
        persistentVolumeClaim:
          claimName: muminst-server-pv-claim-csi
      containers:
      - image: IMAGE:TAG 
        imagePullPolicy: IfNotPresent
        name: muminst-server 
        ports:
        - containerPort: 4000
        resources:
          limits:
            cpu: 250m 
            memory: 256Mi
          requests:
            cpu: 100m 
            memory: 100Mi
        volumeMounts:
        - mountPath: /app/data
          name: muminst-server-volume
