kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: muminst-server
  namespace: default
  labels:
    app: muminst-server
spec:
  ports:
  - name: http
    port: 4000
    targetPort: 4000
  selector:
    app: muminst-server
