kubernetes/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: muminst-server
  namespace: default
spec:
  hosts:
  - muminst-server-old.d1m.dev
  - muminst-server-old.armand1m.dev
  gateways:
  - ingressgateway-workload
  http:
  - match:
    - port: 443
    route:
    - destination:
        host: muminst-server
        port:
          number: 4000
